	     and can retire ugly workarounds during writes to flush such pages.

Severity   : minor
Frequency  : rare
Bugzilla   : 10409
Description: i_sem vs transaction deadlock in mds_obd_destroy during unlink.
Details    : protect inode from truncation within vfs_unlink() context
             just take a reference before calling vfs_unlink() and release it
             when parent's i_sem is free.


------------------------------------------------------------------------------

02-14-2006  Cluster File Systems, Inc. <info@clusterfs.com>
       * version 1.4.6
       * WIRE PROTOCOL CHANGE.  This version of Lustre networking WILL NOT
	 INTEROPERATE with older versions automatically.  Please read the
	 user documentation before upgrading any part of a live system.
       * WARNING: Lustre networking configuration changes are required with
	 this release.  See https://bugzilla.clusterfs.com/show_bug.cgi?id=10052
	 for details.
       * bug fixes
       * Support for kernels:
	2.6.9-22.0.2.EL (RHEL 4)
	2.6.5-7.244 (SLES 9)
	2.6.12.6 vanilla (kernel.org)


Severity   : enhancement
Bugzilla   : 7981/8208
Description: Introduced Lustre Networking (LNET)
Details    : LNET is new networking infrastructure for Lustre, it includes
	     a reorganized network configuration mode (see the user
	     documentation for full details) as well as support for routing
	     between different network fabrics.  Lustre Networking Devices
	     (LNDs) for the supported network fabrics have also been
	     created for this new infrastructure.

Severity   : enhancement
Description: Introduced Access control lists
Details    : clients can set ACLs on files and directories in order to have
	     more fine-grained permissions than the standard Unix UGO+RWX.
	     The MDS must be started with the "-o acl" mount option.

Severity   : enhancement
Description: Introduced filesystem quotas
Details    : Administrators may now establish per-user quotas on the
	     filesystem.

Severity   : enhancement